# dulovar

./: .gitignore  README.md
dulovar-p2p/: Cargo.toml  build.rs
dulovar-p2p/migrations/2025-11-06-233812-0000_create_alerts/: down.sql  up.sql
dulovar-p2p/sqlite/: database.db
dulovar-p2p/src/: grpc_daemon.rs  lib.rs  main.rs  orchestrator.rs  p2p_kad.rs  p2p_node.rs  rest_requests.rs  schema.rs
dulovar-p2p/src/grpc_daemon/: alert.rs  alert_service.rs
dulovar-p2p/src/p2p_kad/: event_loop.rs  events.rs  init_kad.rs  my_behaviour.rs  p2p_kad_utils.rs  rest_request.rs
dulovar-p2p/src/proto/: alert.proto
dulovar-p2p/tests/: benchmark_tests.rs  integration_tests.rs  test_utils.rs
dulovar-web/: package-lock.json  package.json
dulovar-web/src/app/: layout.js  page.js
non-p2p-api/: Cargo.toml  wrangler.toml
non-p2p-api/migrations/: 0001_create_nodes_table.sql
non-p2p-api/src/: lib.rs  models.rs
