[package]
name = "dulovar-p2p"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = "0.12.23"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "io-std"] }
either = "1.12"
futures = "0.3.30"
libp2p = { version = "0.54", features = [ "tokio", "gossipsub", "dns", "identify", "kad", "macros", "noise", "ping", "pnet", "tcp", "websocket", "yamux"] }
tracing-subscriber = { version = "0.3",  features = ["env-filter"] }
