[package]
name = "non-p2p-api"
version = "0.1.0"
edition = "2021"
authors = ["Luis Zambrano <luisezamb@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6", features = ['http', 'd1'] }
serde = { version = "1.0.228", features = ["derive"] }


[dev-dependencies]
serde_json = "1.0"
